--- a/index.html
+++ b/index.html
@@ -108,17 +108,46 @@
       <section class="news">
         <h2>News</h2>
         <div class="images">
-          <img
-            src="./assets/img/omega131-63-41-21-01-001amb-jpg-2.-1024x683.jpg"
-            alt=""
-          />
-          <img src="./assets/img/featured_rado-1-1024x525.jpg" alt="" />
-          <img
-            src="./assets/img/01_chronomat-b01-42-with-a-silver-dial-and-black-contrasting-chronograph-counters-1024x579.jpg"
-            alt=""
-          />
+          <div class="img-wrapper">
+            <img
+              src="./assets/img/omega131-63-41-21-01-001amb-jpg-2.-1024x683.jpg"
+              alt=""
+            />
+          </div>
+          <div class="img-wrapper">
+            <div class="text-and-img">
+              <img src="./assets/img/featured_rado-1-1024x525.jpg" alt="" />
+              <h2>TRUE THINLINE LES COULEURS LE CORBUSIER</h2>
+            </div>
+          </div>
+          <div class="img-wrapper">
+            <img
+              src="./assets/img/01_chronomat-b01-42-with-a-silver-dial-and-black-contrasting-chronograph-counters-1024x579.jpg"
+              alt=""
+            />
+          </div>
         </div>
+        <p>
+          We are proud to present a highlight from our new <br />
+          collection – the True Thinline Les Couleurs™ Le Corbusier.
+        </p>
+        <a href="#"
+          >— See all the news<img src="./assets/img/arrow.svg" alt=""
+        /></a>
       </section>
+      <footer>
+        <section class="socials">
+          <div class="contact">
+            <a href="#">Company</a>
+            <a href="#">News</a>
+            <a href="#">Contact</a>
+          </div>
+          <div class="ig-fb">
+            <img src="./assets/img/facebook.svg" alt="" />
+            <img src="./assets/img/insta.svg" alt="" />
+          </div>
+        </section>
+      </footer>
     </main>
   </body>
 </html>
